# distributions

./: 404.html  CONTRIBUTING.md  LICENSE.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  publish_docs.yml  test.yml
docs/: gen_ref_pages.py
reference/SUMMARY/: index.html
reference/rs_distributions/: index.html
reference/rs_distributions/distributions/: index.html
reference/rs_distributions/modules/: index.html
reference/rs_distributions/transforms/: index.html
search/: search_index.json
src/rs_distributions/: __about__.py
src/rs_distributions/distributions/: __init__.py  folded_normal.py  rice.py
src/rs_distributions/modules/: __init__.py  distribution.py  kl.py  transformed_parameter.py
src/rs_distributions/transforms/: __init__.py  fill_scale_tril.py
tests/: __init__.py
tests/distributions/: test_folded_normal.py  test_rice.py
tests/modules/: test_distribution_modules.py  test_kl.py  test_transformed_parameter.py
tests/transforms/: fill_scale_tril.py
